<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background"
    android:paddingHorizontal="32dp"
    android:paddingVertical="32dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/viewTittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/principal"
        app:cardCornerRadius="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/baseline_calculate_24"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculadora_de_salario_neto"
                android:textColor="@color/white" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/viewSalario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salario_bruto_anual"
        android:textColor="@color/principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewTittle"
        app:layout_constraintVertical_bias="0.06" />

    <EditText
        android:id="@+id/editSalario"
        android:layout_width="295dp"
        android:layout_height="35dp"
        android:inputType="numberDecimal"
        android:textColor="@color/principal"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSalario"
        app:layout_constraintVertical_bias="0.01"/>

    <TextView
        android:id="@+id/viewPagas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_de_pagas"
        android:textColor="@color/principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editSalario"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editPagas"
        android:layout_width="295dp"
        android:layout_height="35dp"
        android:inputType="numberDecimal"
        android:textColor="@color/principal"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewPagas"
        app:layout_constraintVertical_bias="0.01"/>

    <TextView
        android:id="@+id/viewEdad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edad"
        android:textColor="@color/principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPagas"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editEdad"
        android:layout_width="295dp"
        android:layout_height="35dp"
        android:inputType="numberDecimal"
        android:textColor="@color/principal"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEdad"
        app:layout_constraintVertical_bias="0.01"/>

    <TextView
        android:id="@+id/viewGrupo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grupo_profesional"
        android:textColor="@color/principal"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEdad"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editGrupo"
        android:layout_width="295dp"
        android:layout_height="35dp"
        android:inputType="text"
        android:textColor="@color/principal"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewGrupo"
        app:layout_constraintVertical_bias="0.01"/>

    <TextView
        android:id="@+id/viewDisca"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grado_de_discapacidad"
        android:textColor="@color/principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editGrupo"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editDisca"
        android:layout_width="295dp"
        android:layout_height="35dp"
        android:inputType="numberDecimal"
        android:textColor="@color/principal"
        android:hint="@string/rellenar_solo_en_caso_afirmativo"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewDisca"
        app:layout_constraintVertical_bias="0.01"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/viewEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/estado_civil"
        android:textColor="@color/principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDisca"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editEstado"
        android:layout_width="295dp"
        android:layout_height="35dp"
        android:inputType="text"
        android:textColor="@color/principal"
        android:textSize="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewEstado"
        app:layout_constraintVertical_bias="0.01"/>

    <TextView
        android:id="@+id/viewHijos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/numero_de_hijos"
        android:textColor="@color/principal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.01"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEstado"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/editHijos"
        android:layout_width="295dp"
        android:layout_height="35dp"
        android:inputType="number"
        android:textColor="@color/principal"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewHijos"
        app:layout_constraintVertical_bias="0.01"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/calcular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/principal"
        android:text="@string/calcular"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editHijos"/>




</androidx.constraintlayout.widget.ConstraintLayout>